opam-version: "1.2"
maintainer: "Nathan Rebours <nathan@cryptosense.com>"
author: "Nathan Rebours <nathan@cryptosense.com>"
homepage: "https://github.com/cryptosense/ppx_ulong"
bug-reports: "https://github.com/cryptosense/ppx_ulong/issues"
license: "BSD-2"
dev-repo: "https://github.com/cryptosense/ppx_ulong.git"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
build-test: [
  ["jbuilder" "build" "-p" name "-j" jobs]
  ["jbuilder" "runtest" "-j" jobs]
]
depends: [
  "integers"
  "jbuilder" {build}
  "ocaml-migrate-parsetree"
  "ounit" {test & >= "2.0.0"}
  "ppx_tools_versioned"
  "result" {>= "1.2"}
]
available: [ocaml-version >= "4.02.0"]
